--- a/Templates/foodapp/dashboard.html
+++ b/Templates/foodapp/dashboard.html
@@ -59,7 +59,7 @@
         </li>
         {% if request.session.CustId is None and request.session.AdminId is not None %}
         <li class="nav-item active">
-          <a class="nav-link" id="nav-link" href="addfoods">Add Food <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="nav-link" href="/addfoods">Add Food <span class="sr-only">(current)</span></a>
         </li>
         {% endif %}
         {% if request.session.CustId is None and request.session.AdminId is not None %}
@@ -68,7 +68,7 @@
         </li>
         {% endif %}
         <li class="nav-item active">
-          <a class="nav-link" id="nav-link" href="allfood">Food Menu <span class="sr-only">(current)</span></a>
+          <a class="nav-link" id="nav-link" href="/allfood">Food Menu <span class="sr-only">(current)</span></a>
         </li>
         {% if request.session.CustId is None and request.session.AdminId is None %}
         <li class="nav-item active">
