--- a/Templates/foodapp/index.html
+++ b/Templates/foodapp/index.html
@@ -127,6 +127,7 @@
         <!-- owl stylesheets --> 
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
+
   </head>
     <nav class="navbar navbar-expand-lg navbar-light" style="position: fixed;width:100%;background-image: linear-gradient(180deg,#FFF,#FFF);box-shadow: 0px 0px 7px 0px #404040;">
       <link rel="icon" href="../" />
@@ -197,6 +198,7 @@
                     <a class="dropdown-item" style="background:red;width:1;border-radius:4px;" href="/logout"><i class="fas fa-sign-out-alt" style="font-size:20px;color:white;"></i>&nbsp;&nbsp;<font color="white">Logout</font></a>
                   </div>
           </li>
+   
           {% endif %}
         </ul>
 
@@ -209,18 +211,19 @@
     <div id="starting_ban"> 
     </br></br>
          <div id="my_slider" class="carousel slide" data-ride="carousel">
+            <!-- <h2 class="banner_taital" style="padding-left: 20%;">{{success}}</h2> -->
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <div class="row">
-                     <div class="col-md-6">
+                  <div class="row" style="position: sticky;">
+                     <!-- <div class="col-md-6"> -->
                         <!-- <div class="container"> -->
                            <!-- <div class="banner_img"><img src="{% static 'images/a.jpeg' %}" style=    "width: 50%;
                               text-align: center;"></div> -->
-                         </div>
+                         <!-- </div> -->
                            <!-- <h1 class="banner_taital style"></h1>
                            <p class="banner_text"></p> -->
                         <!-- </div> -->
-                     </div>
+                     <!-- </div> -->
                      <div class="col-md-6">
                         <div class="banner_img" ><img src="{% static 'images/b.jpeg' %}" style=    "width: 50%;
                           text-align: center;"></div>
@@ -229,12 +232,12 @@
                </div>
                <div class="carousel-item">
                   <div class="row">
-                     <div class="col-md-6">
+                     <!-- <div class="col-md-6">
                         <div class="container">
                            <h1 class="banner_taital"></h1>
                            <p class="banner_text"></p>
                         </div>
-                     </div>
+                     </div> -->
                      <div class="col-md-6">
                         <div class="banner_img"><img src="{% static 'images/a.jpeg' %}" style=    "width: 50%;
                           text-align: center;"></div>
@@ -387,4 +390,19 @@
        </div>
        </div>
        </div>
+       <body>
+         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+       
+         <script>
+          console.log("sucessmsg");
+               Swal.fire(
+                   "{{success}}",
+                   'Thank you for choosing us',
+                   'success'
+                  )
+                // swal("Successfully added   to cart", "success");     
+             
+         </script>
+       </body>
 </html>
